--- a/jardineria/templates/base.html
+++ b/jardineria/templates/base.html
@@ -1,18 +1,17 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es"> 
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}VitaVerde{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/HomeStyles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/baseStyles.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body class="contenido">
     <header>
         <nav id="barraNav">
             <img id="logo" src="{% static 'img/saveFreepik.png' %}">
-            <a href="{% url 'productos:index' %}">Productos</a>
-            <a href="{% url 'clientes:index' %}">Clientes</a>
+            {% block tags%}{%endblock%}
         </nav>
     </header>
 
